fix align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,6 @@ body.dark-theme .icon {
 }
 
 .profile {
-  max-width: 800px;
   text-align: center;
 }
 
